apps/rook-ceph/overlays/prod/ingress-route-ext.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: ceph-ingress-ext
  namespace: rook-ceph
spec:
  entryPoints:
    - websecure-ext
  routes:
    - match: Host(`ceph.sobrinho.pt`)
      kind: Rule
      middlewares:
        - name: middleware-auth-forward
          namespace: traefik
      services:
        - name: rook-ceph-mgr-dashboard
          port: 8443
          scheme: https
          serversTransport: traefik-transport-insecure@kubernetescrd
