apps/rook-ceph/overlays/prod/s3-ingress-route-ext.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: ceph-s3-ingress-ext
  namespace: rook-ceph
spec:
  entryPoints:
    - websecure-ext
  routes:
    - match: Host(`s3.sobrinho.pt`)
      kind: Rule
      middlewares:
        - name: middleware-auth-s3
          namespace: traefik
      services:
        - name: rook-ceph-rgw-ceph-objectstore
          port: 80
  tls:
    options:
      name: mtls-requested
      namespace: traefik
