apps/rook-ceph/overlays/prod/s3-ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: ceph-s3-ingress
  namespace: rook-ceph
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int-old
spec:
  entryPoints:
    - websecure
    # - websecure-ext - disabled
  routes:
    - match: Host(`s3.sobrinho.pt`)
      kind: Rule
      services:
        - name: rook-ceph-rgw-ceph-objectstore
          port: 80
  tls:
    secretName: ceph-s3-cert
